# imuDataUtils

./: .gitignore  CMakeLists.txt  README.md
cmake/: ImuDataUtilsConfig.cmake.in
exe/: cutImuH5ByIdxs.cpp  cutImuH5ByUnixTimestamps.cpp  imuh5tocsv.cpp  validateImuFile.cpp
include/: datapkgr.h  imu.h  imuDataTestUtils.h  imutestutils.h  testutils.h
src/: datapkgr.cpp  imu.cpp  imuDataTestUtils.cpp  imutestutils.cpp  testutils.cpp
test/: imuClassUnitTest.cpp  test_apdm_v5.cpp
